Initial network policy PR
- Adds a Security Group db table, routers, handlers and models to
  the api-server.
- Adds an nftables implementation in the wireguard driver.
