# cmd/nexctl/main.go
@@ -11,6 +11,7 @@ import (
 
 	"github.com/google/uuid"
 	"github.com/nexodus-io/nexodus/internal/client"
+	"github.com/nexodus-io/nexodus/internal/models"
 	"github.com/urfave/cli/v2"
 )
 
@@ -242,6 +243,165 @@ func main() {
 							userID := cCtx.String("user-id")
 							orgID := cCtx.String("organization-id")
 							return deleteUserFromOrg(mustCreateAPIClient(cCtx), encodeOut, userID, orgID)
+						},
+					},
+				},
+			},
+			{
+				Name:  "security-group",
+				Usage: "commands relating to security groups",
+				Subcommands: []*cli.Command{
+					{
+						Name:  "list",
+						Usage: "List all security groups",
+						Flags: []cli.Flag{
+							&cli.StringFlag{
+								Name:     "organization-id",
+								Required: true,
+							},
+						},
+						Action: func(cCtx *cli.Context) error {
+							encodeOut := cCtx.String("output")
+							orgID := cCtx.String("organization-id")
+							return listSecurityGroups(mustCreateAPIClient(cCtx), encodeOut, orgID)
+						},
+					},
+					{
+						Name:  "delete",
+						Usage: "Delete a security group",
+						Flags: []cli.Flag{
+							&cli.StringFlag{
+								Name:     "security-group-id",
+								Required: true,
+							},
+							&cli.StringFlag{
+								Name:     "organization-id",
+								Required: true,
+							},
+						},
+
+						Action: func(cCtx *cli.Context) error {
+							encodeOut := cCtx.String("output")
+							sgID := cCtx.String("security-group-id")
+							orgID := cCtx.String("organization-id")
+							return deleteSecurityGroup(mustCreateAPIClient(cCtx), encodeOut, sgID, orgID)
+						},
+					},
+					{
+						Name:  "create",
+						Usage: "create a security group",
+						Flags: []cli.Flag{
+							&cli.StringFlag{
+								Name:     "name",
+								Required: true,
+							},
+							&cli.StringFlag{
+								Name:     "organization-id",
+								Required: true,
+							},
+							&cli.StringFlag{
+								Name:     "description",
+								Required: false,
+							},
+							&cli.StringFlag{
+								Name:     "inbound-rules",
+								Required: false,
+							},
+							&cli.StringFlag{
+								Name:     "outbound-rules",
+								Required: false,
+							},
+						},
+						Action: func(cCtx *cli.Context) error {
+							encodeOut := cCtx.String("output")
+							name := cCtx.String("name")
+							description := cCtx.String("description")
+							orgID := cCtx.String("organization-id")
+							inboundRulesStr := cCtx.String("inbound-rules")
+							outboundRulesStr := cCtx.String("outbound-rules")
+
+							var inboundRules, outboundRules []models.SecurityRuleJson
+							if inboundRulesStr != "" {
+								rules, err := jsonStringToSecurityRules(inboundRulesStr)
+								if err != nil {
+									return fmt.Errorf("failed to convert inbound rules string to security rules: %w", err)
+								}
+								inboundRules = make([]models.SecurityRuleJson, len(rules))
+								copy(inboundRules, rules)
+							}
+
+							if outboundRulesStr != "" {
+								rules, err := jsonStringToSecurityRules(outboundRulesStr)
+								if err != nil {
+									return fmt.Errorf("failed to convert outbound rules string to security rules: %w", err)
+								}
+								outboundRules = make([]models.SecurityRuleJson, len(rules))
+								copy(outboundRules, rules)
+							}
+
+							fmt.Println("Warning: currently under development and not fully functional. Use at your own risk. This feature is not fully implemented.")
+							return createSecurityGroup(mustCreateAPIClient(cCtx), encodeOut, name, description, orgID, inboundRules, outboundRules)
+						},
+					},
+					{
+						Name:  "update",
+						Usage: "update a security group",
+						Flags: []cli.Flag{
+							&cli.StringFlag{
+								Name:     "name",
+								Required: false,
+							},
+							&cli.StringFlag{
+								Name:     "security-group-id",
+								Required: true,
+							},
+							&cli.StringFlag{
+								Name:     "organization-id",
+								Required: true,
+							},
+							&cli.StringFlag{
+								Name:     "description",
+								Required: false,
+							},
+							&cli.StringFlag{
+								Name:     "inbound-rules",
+								Required: false,
+							},
+							&cli.StringFlag{
+								Name:     "outbound-rules",
+								Required: false,
+							},
+						},
+						Action: func(cCtx *cli.Context) error {
+							encodeOut := cCtx.String("output")
+							name := cCtx.String("name")
+							sgID := cCtx.String("security-group-id")
+							orgID := cCtx.String("organization-id")
+							description := cCtx.String("description")
+							inboundRulesStr := cCtx.String("inbound-rules")
+							outboundRulesStr := cCtx.String("outbound-rules")
+
+							var inboundRules, outboundRules []models.SecurityRuleJson
+							if inboundRulesStr != "" {
+								rules, err := jsonStringToSecurityRules(inboundRulesStr)
+								if err != nil {
+									return fmt.Errorf("failed to convert inbound rules string to security rules: %w", err)
+								}
+								inboundRules = make([]models.SecurityRuleJson, len(rules))
+								copy(inboundRules, rules) // Use copy() instead of the loop
+							}
+
+							if outboundRulesStr != "" {
+								rules, err := jsonStringToSecurityRules(outboundRulesStr)
+								if err != nil {
+									return fmt.Errorf("failed to convert outbound rules string to security rules: %w", err)
+								}
+								outboundRules = make([]models.SecurityRuleJson, len(rules))
+								copy(outboundRules, rules) // Use copy() instead of the loop
+							}
+
+							fmt.Println("Warning: currently under development and not fully functional. Use at your own risk. This feature is not fully implemented.")
+							return updateSecurityGroup(mustCreateAPIClient(cCtx), encodeOut, sgID, orgID, name, description, inboundRules, outboundRules)
 						},
 					},
 				},
