# internal/docs/swagger.json
@@ -934,6 +934,302 @@
                 }
             }
         },
+        "/api/organizations/{organization_id}/security_groups": {
+            "get": {
+                "description": "Lists all Security Groups",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "SecurityGroup"
+                ],
+                "summary": "List Security Groups",
+                "operationId": "ListSecurityGroups",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Organization ID",
+                        "name": "organization_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.SecurityGroup"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Requests",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Adds a new Security Group",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "SecurityGroup"
+                ],
+                "summary": "Add SecurityGroup",
+                "operationId": "CreateSecurityGroup",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Organization ID",
+                        "name": "organization_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Add SecurityGroup",
+                        "name": "SecurityGroup",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AddSecurityGroup"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.SecurityGroup"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/models.ConflictsError"
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Requests",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/organizations/{organization_id}/security_groups/{id}": {
+            "get": {
+                "description": "Gets a security group in an organization by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "SecurityGroup"
+                ],
+                "summary": "Get SecurityGroup",
+                "operationId": "GetSecurityGroup",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Organization ID",
+                        "name": "organization_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Security Group ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SecurityGroup"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Requests",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/organizations/{organization_id}/security_groups/{security_group_id}": {
+            "delete": {
+                "description": "Deletes an existing SecurityGroup",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "SecurityGroup"
+                ],
+                "summary": "Delete SecurityGroup",
+                "operationId": "DeleteSecurityGroup",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Organization ID",
+                        "name": "organization_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Security Group ID",
+                        "name": "security_group_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/models.SecurityGroup"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Requests",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "Updates a Security Group by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "SecurityGroup"
+                ],
+                "summary": "Update Security Group",
+                "operationId": "UpdateSecurityGroup",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Organization ID",
+                        "name": "organization_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Security Group ID",
+                        "name": "security_group_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Security Group Update",
+                        "name": "update",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateSecurityGroup"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SecurityGroup"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Requests",
+                        "schema": {
+                            "$ref": "#/definitions/models.BaseError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users": {
             "get": {
                 "description": "Lists all users",
@@ -1325,6 +1621,9 @@
                 "relay": {
                     "type": "boolean"
                 },
+                "security_group_ids": {
+                    "type": "string"
+                },
                 "symmetric_nat": {
                     "type": "boolean"
                 },
@@ -1379,6 +1678,31 @@
                 "name": {
                     "type": "string",
                     "example": "zone-red"
+                },
+                "security_group_ids": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.AddSecurityGroup": {
+            "type": "object",
+            "properties": {
+                "group_description": {
+                    "type": "string",
+                    "example": "group_description"
+                },
+                "group_name": {
+                    "type": "string",
+                    "example": "group_name"
+                },
+                "inbound_rules": {
+                    "type": "string"
+                },
+                "org_id": {
+                    "type": "string"
+                },
+                "outbound_rules": {
+                    "type": "string"
                 }
             }
         },
@@ -1458,6 +1782,9 @@
                 },
                 "revision": {
                     "type": "integer"
+                },
+                "security_group_ids": {
+                    "type": "string"
                 },
                 "symmetric_nat": {
                     "type": "boolean"
@@ -1590,6 +1917,33 @@
                 },
                 "owner_id": {
                     "type": "string"
+                },
+                "security_group_ids": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SecurityGroup": {
+            "type": "object",
+            "properties": {
+                "group_description": {
+                    "type": "string"
+                },
+                "group_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "aa22666c-0f57-45cb-a449-16efecc04f2e"
+                },
+                "inbound_rules": {
+                    "type": "string"
+                },
+                "org_id": {
+                    "type": "string"
+                },
+                "outbound_rules": {
+                    "type": "string"
                 }
             }
         },
@@ -1631,6 +1985,23 @@
                 }
             }
         },
+        "models.UpdateSecurityGroup": {
+            "type": "object",
+            "properties": {
+                "group_description": {
+                    "type": "string"
+                },
+                "group_name": {
+                    "type": "string"
+                },
+                "inbound_rules": {
+                    "type": "string"
+                },
+                "outbound_rules": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -1641,6 +2012,9 @@
                     "description": "Since the ID comes from the IDP, we have no control over the format...",
                     "type": "string",
                     "example": "aa22666c-0f57-45cb-a449-16efecc04f2e"
+                },
+                "security_group_ids": {
+                    "type": "string"
                 },
                 "updatedAt": {
                     "type": "string"
